# long-running-harness

./: .gitignore  CLAUDE.md  PROMPT.md  SESSION-CONTEXT.md  features.json  north-star.txt  vercel.json
harness/: pyproject.toml
harness/harness/: __init__.py  __main__.py  backend.py  client.py  dashboard.py  io_utils.py  main.py  model_policy.py  multi_orchestrator.py  orchestrator.py  progress.py  security.py  validators.py
harness/harness/agents/: architect.py  evaluator.py  generator.py  planner.py
harness/harness/prompts/: architect.md  evaluator.md  generator.md  planner.md
harness/harness/runtime/: __init__.py  engine.py  tools.py
harness/harness/transports/: __init__.py  anthropic.py  base.py  openai_compatible.py
output/: README.md  app_spec.md  feature_list.json  init.sh  pyproject.toml
output/src/editorial_fit_compiler/: __init__.py
output/src/editorial_fit_compiler/analyzers/: __init__.py  abstraction_phrase_density.py  bullet_usage.py  citation_patterns.py  discourse_scaffolding.py  hedge_density.py  nominalization_density.py  punctuation_markers.py  rhetorical_template_repetition.py  sentence_opener_repetition.py  structure_metrics.py  undefined_key_terms.py
output/src/editorial_fit_compiler/classifiers/: __init__.py
output/src/editorial_fit_compiler/cli/: __init__.py  main.py
output/src/editorial_fit_compiler/core/: __init__.py  config.py  ingestion.py  models.py  paths.py  segmentation.py  venue_profiles.py
output/src/editorial_fit_compiler/prompts/: __init__.py
output/src/editorial_fit_compiler/reports/: __init__.py
output/src/editorial_fit_compiler/utils/: __init__.py  spans.py
output/src/pydantic/: __init__.py
output/tests/: test_analyzers_abstraction_phrase_density.py  test_analyzers_bullet_usage.py  test_analyzers_citation_patterns.py  test_analyzers_discourse_scaffolding.py  test_analyzers_hedge_density.py  test_analyzers_nominalization_density.py  test_analyzers_punctuation_markers.py  test_analyzers_rhetorical_template_repetition.py  test_analyzers_sentence_opener_repetition.py  test_analyzers_structure_metrics.py  test_analyzers_undefined_key_terms.py  test_architecture_modules.py  test_cli_main.py  test_core_config.py  test_core_ingestion.py  test_core_models.py  test_core_paths.py  test_core_segmentation.py  test_core_venue_profiles.py  test_quality_tooling.py  test_utils_spans.py
output/tests/fixtures/analyzers/: structure_metrics_draft.md  structure_metrics_expected.json
output/tests/fixtures/config/: job_defaults.yaml  job_missing_required.yaml  valid_job.yaml
output/tests/fixtures/venue_profiles/: invalid_schema_profile.json  invalid_top_level_profile.json  missing_audience_profile.yaml  missing_disfavored_markers_profile.yaml  missing_score_weights_profile.yaml  missing_structure_norms_profile.yaml  missing_tone_profile.yaml  missing_weight_abstraction_control_profile.yaml  missing_weight_field.yaml  valid_profile.json  (+4 more)
(+21 files in other folders)
