[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "editorial-fit-compiler"
version = "0.1.0"
description = "Editorial Fit Compiler CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1.0",
  "pydantic>=2.0,<3.0",
  "python-docx>=1.1.0,<2.0",
  "nltk>=3.8,<4.0",
  "rapidfuzz>=3.0,<4.0",
  "pyyaml>=6.0,<7.0",
  "rich>=13.0,<14.0",
  "jinja2>=3.1,<4.0",
]

[project.scripts]
efc = "editorial_fit_compiler.cli.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
editorial_fit_compiler = ["core/resources/venue_profiles/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
cache_dir = ".tmp/pytest_cache"
norecursedirs = [
  ".git",
  ".venv",
  ".tmp",
  ".ruff_cache",
  ".pytest_cache",
  "dist",
  "build",
  "*.egg-info",
  "pytest-cache-files-*",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
exclude = [
  ".venv",
  ".tmp",
  "dist",
  "build",
  ".pytest_cache",
  ".ruff_cache",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
files = ["src"]
strict = true
warn_unused_ignores = true
show_error_codes = true

[tool.editorial_fit_compiler]
verify_command = "python -m pytest && ruff check src tests && mypy"
